--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <meta property="og:title" content="Futomaki - Othardische Tradition" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://demkadse.github.io/futomaki/" />
-    <meta property="og:image" content="https://demkadse.github.io/futomaki/hintergrund.jpg" />
+    <meta property="og:url" content="https://kaidaokada.github.io/futomaki/" />
+    <meta property="og:image" content="https://kaidaokada.github.io/futomaki/hintergrund.jpg" />
     <meta property="og:description" content="Traditionelle Köstlichkeiten aus dem Herzen Othards. Erlebt authentische Sushi-Kunst und östliche Gastfreundschaft." />
     <meta name="theme-color" content="#d4af37">
     <meta name="twitter:card" content="summary_large_image">
@@ -227,7 +227,11 @@
     </main>
 
     <footer>
-        <p><span class="egg-trigger">©</span> 2026 Futomaki. Das Design und die Zusammenstellung dieser Präsenz sind urheberrechtlich geschützt. Alle externen Medieninhalte verbleiben im Eigentum der jeweiligen Rechteinhaber.</p>
+        <p>
+            <a href="https://www.youtube.com/watch?v=hPr-Yc92qaY" target="_blank" class="egg-trigger">©</a> 
+            2026 Futomaki. Das Design und die Zusammenstellung dieser Präsenz sind urheberrechtlich geschützt. 
+            Alle externen Medieninhalte verbleiben im Eigentum der jeweiligen Rechteinhaber.
+        </p>
     </footer>
 
     <div id="modal-kaida" class="modal-overlay" onclick="closeModal('modal-kaida')">
