--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
     <footer>
         <p>
-            <a href="https://www.youtube.com/watch?v=hPr-Yc92qaY" target="_blank" class="egg-trigger">©</a> 
+            <a href="https://youtu.be/DLzxrzFCyOs?list=RDDLzxrzFCyOs?autoplay=1" target="_blank" class="egg-trigger">©</a> 
             2026 Futomaki. Das Design und die Zusammenstellung dieser Präsenz sind urheberrechtlich geschützt. 
             Alle externen Medieninhalte verbleiben im Eigentum der jeweiligen Rechteinhaber.
         </p>
@@ -286,3 +286,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
