--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <meta property="og:title" content="Futomaki - Othardische Tradition" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://kaidaokada.github.io/futomaki/" />
-    <meta property="og:image" content="https://kaidaokada.github.io/futomaki/hintergrund.jpg" />
+    <meta property="og:url" content="https://DEIN_NEUER_ACCOUNTNAME.github.io/futomaki/" />
+    <meta property="og:image" content="https://DEIN_NEUER_ACCOUNTNAME.github.io/futomaki/hintergrund.jpg" />
     <meta property="og:description" content="Traditionelle Köstlichkeiten aus dem Herzen Othards. Erlebt authentische Sushi-Kunst und östliche Gastfreundschaft." />
     <meta name="theme-color" content="#d4af37">
     <meta name="twitter:card" content="summary_large_image">
@@ -100,95 +100,11 @@
                 <div class="menu-card" onclick="openModal('modal-wald')">Der Ruf des Waldes</div>
                 <div class="menu-card" onclick="openModal('modal-klinge')">Die brennende Klinge</div>
             </div>
-
-            <h2>Traditionelle Sushi</h2>
-            <div class="menu-grid">
-                <div class="menu-item"><div class="menu-item-header"><span>Nigiri</span><span>45 Gil</span></div><span class="menu-item-desc">Handgeformter Reis belegt mit Fisch/Meeresfrüchten.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Maki</span><span>49 Gil</span></div><span class="menu-item-desc">Sushi-Rollen mit Nori, Reis und verschiedenen Füllungen.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Sashimi</span><span>52 Gil</span></div><span class="menu-item-desc">Dünne Scheiben rohen Fischs, pur serviert.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Temaki</span><span>50 Gil</span></div><span class="menu-item-desc">Handgerollte Sushi-Kegel mit Nori.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Uramaki</span><span>54 Gil</span></div><span class="menu-item-desc">Inside-Out Rollen mit Reis außen.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Chirashi</span><span>48 Gil</span></div><span class="menu-item-desc">Schüssel mit Reis, rohem Fisch und Gemüse.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Inari</span><span>52 Gil</span></div><span class="menu-item-desc">Süße frittierte Tofutasche mit Reis.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Oshizushi</span><span>46 Gil</span></div><span class="menu-item-desc">In einer Holzform gepresstes Sushi.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Narezushi</span><span>45 Gil</span></div><span class="menu-item-desc">Fermentierter Fisch mit Reis.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Gunkan</span><span>58 Gil</span></div><span class="menu-item-desc">Sushi-Basis für Fischrogen oder weiche Zutaten.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Sushi Burger</span><span>50 Gil</span></div><span class="menu-item-desc">Reisbällchen als Brötchen mit Füllung.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Aburi</span><span>56 Gil</span></div><span class="menu-item-desc">Kurz über offener Flamme gegarter Fisch.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Kaisen-don</span><span>47 Gil</span></div><span class="menu-item-desc">Reisschüssel mit Meeresfrüchten.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Tekkadon</span><span>46 Gil</span></div><span class="menu-item-desc">Reis mit Thunfischscheiben.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Futomaki</span><span>50 Gil</span></div><span class="menu-item-desc">Dicke Sushi-Rollen mit vielen Zutaten.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>California Roll</span><span>55 Gil</span></div><span class="menu-item-desc">Mit Krabbenfleisch, Avocado und Gurke.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Dragon Roll</span><span>48 Gil</span></div><span class="menu-item-desc">Aal, Avocado und Krabbenfleisch.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Rainbow Roll</span><span>48 Gil</span></div><span class="menu-item-desc">Verschiedene Fischsorten im Regenbogen-Look.</span></div>
-            </div>
-
-            <h2>Traditionelle Küche</h2>
-            <div class="menu-grid">
-                <div class="menu-item"><div class="menu-item-header"><span>Ramen</span><span>35 Gil</span></div><span class="menu-item-desc">Nudelsuppe mit Brühe, Ei und Gemüse.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Tempura</span><span>40 Gil</span></div><span class="menu-item-desc">Frittierte Köstlichkeiten im Teigmantel.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Okonomiyaki</span><span>38 Gil</span></div><span class="menu-item-desc">Herzhafter östlicher Pfannkuchen.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Tonkatsu</span><span>45 Gil</span></div><span class="menu-item-desc">Paniertes Schweineschnitzel mit Reis.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Yakitori</span><span>35 Gil</span></div><span class="menu-item-desc">Gegrillte Hähnchenspieße mit Tare-Soße.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Udon</span><span>36 Gil</span></div><span class="menu-item-desc">Dicke Weizennudeln in heißer Brühe.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Gyudon</span><span>38 Gil</span></div><span class="menu-item-desc">Reis mit Rindfleisch und Zwiebeln.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Takoyaki</span><span>35 Gil</span></div><span class="menu-item-desc">Teigbällchen mit Oktopusfüllung.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Miso</span><span>25 Gil</span></div><span class="menu-item-desc">Leichte Misosuppe mit Tofu und Algen.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Karaage</span><span>40 Gil</span></div><span class="menu-item-desc">Knusprig frittierte Hähnchenstücke.</span></div>
-            </div>
-
-            <h2>Süßes von Kitsune Momo</h2>
-            <div class="menu-grid">
-                <div class="menu-item"><div class="menu-item-header"><span>Mochi</span><span>22 Gil</span></div><span class="menu-item-desc">Zäher Reiskuchen mit Bohnenpaste.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Daifuku</span><span>21 Gil</span></div><span class="menu-item-desc">Mochi mit süßer Füllung.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Dorayaki</span><span>20 Gil</span></div><span class="menu-item-desc">Pfannkuchen mit süßer Bohnenpaste.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Taiyaki</span><span>24 Gil</span></div><span class="menu-item-desc">Fischförmiges Gebäck, warm serviert.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Anmitsu</span><span>22 Gil</span></div><span class="menu-item-desc">Gelee, Früchte und Matcha-Eis.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Yokan</span><span>23 Gil</span></div><span class="menu-item-desc">Fester Gelee-Nachtisch aus Agar-Agar.</span></div>
-            </div>
-        </section>
+            </section>
 
         <section id="getraenke" class="tab-content">
-            <h2>Traditionelle Getränke</h2>
-            <div class="menu-grid">
-                <div class="menu-item"><div class="menu-item-header"><span>Nihonshu Sake</span><span>12 Gil</span></div><span class="menu-item-desc">Traditioneller japanischer Reiswein.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Amazake</span><span>10 Gil</span></div><span class="menu-item-desc">Süßes, alkoholfreies Reisgetränk.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Doburoku</span><span>13 Gil</span></div><span class="menu-item-desc">Ungefilterte, trübe Version von Sake.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Umeshu</span><span>14 Gil</span></div><span class="menu-item-desc">Likör aus eingelegten Ume-Früchten.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Kuchikamizake</span><span>22 Gil</span></div><span class="menu-item-desc">Antikes alkoholisches Zeremoniengetränk.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Shōchū</span><span>16 Gil</span></div><span class="menu-item-desc">Destillat aus Reis oder Gerste.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Cha (Tee)</span><span>13 Gil</span></div><span class="menu-item-desc">Matcha-Tee, wichtig für Teezeremonien.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Sake-Kasu</span><span>13 Gil</span></div><span class="menu-item-desc">Nebenprodukt der Sake-Herstellung.</span></div>
-            </div>
-
-            <h2>Cocktails</h2>
-            <div class="menu-grid">
-                <div class="menu-item"><div class="menu-item-header"><span>Sakura Martini</span><span>18 Gil</span></div><span class="menu-item-desc">Gin mit Kirschblütenlikör.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Ume Sour</span><span>17 Gil</span></div><span class="menu-item-desc">Umeshu mit süß-saurer Note.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Matcha Highball</span><span>13 Gil</span></div><span class="menu-item-desc">Whisky, Matcha-Tee und Soda.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Yuzu Collins</span><span>14 Gil</span></div><span class="menu-item-desc">Shochu mit frischem Yuzu-Saft.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Sake Mojito</span><span>12 Gil</span></div><span class="menu-item-desc">Sake mit Minze und Limette.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Shiso Gimlet</span><span>13 Gil</span></div><span class="menu-item-desc">Gin mit Limette und Shiso-Blättern.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Wasabi Bloody Mary</span><span>13 Gil</span></div><span class="menu-item-desc">Pikant mit Wasabi und Sake.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Momo Bellini</span><span>16 Gil</span></div><span class="menu-item-desc">Sake mit Pfirsichpüree und Yuzu.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Hojicha Old Fashioned</span><span>13 Gil</span></div><span class="menu-item-desc">Whisky mit geröstetem Hojicha-Tee.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Kokuto Daiquiri</span><span>13 Gil</span></div><span class="menu-item-desc">Rum mit dunklem Zucker und Shiso.</span></div>
-            </div>
-
-            <h2>Hauslimonaden</h2>
-            <div class="menu-grid">
-                <div class="menu-item"><div class="menu-item-header"><span>Lychee-Limonade</span><span>12 Gil</span></div><span class="menu-item-desc">Lychee-Püree und frische Minze.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Ramune</span><span>10 Gil</span></div><span class="menu-item-desc">Klassische Limo mit Glasperle.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Mango-Minz-Limo</span><span>13 Gil</span></div><span class="menu-item-desc">Süße Mango mit kühler Minze.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Yuzu Ale</span><span>11 Gil</span></div><span class="menu-item-desc">Yuzu mit Sojamilch.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Kiwi-Apfel-Limo</span><span>14 Gil</span></div><span class="menu-item-desc">Säuerlich-süßer Fruchtmix.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Momo's Melone</span><span>12 Gil</span></div><span class="menu-item-desc">Honigmelone mit Eiskristallen.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Honigmelone-Minz-Limo</span><span>13 Gil</span></div><span class="menu-item-desc">Würzige Minze mit süßer Melone.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Kaidas Sahne Klecks</span><span>10 Gil</span></div><span class="menu-item-desc">Limo mit einer Kugel Eiscreme.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Apfel-Rolanbeere-Limo</span><span>13 Gil</span></div><span class="menu-item-desc">Apfelsaft mit Erdbeerpüree.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Mogkalea</span><span>13 Gil</span></div><span class="menu-item-desc">Kaffee mit Mogry-Sahnehaube.</span></div>
-            </div>
-        </section>
+            <h2>Getränkekarte</h2>
+            </section>
 
         <section id="mitarbeiter" class="tab-content">
             <h2>Unser Team</h2>
@@ -197,93 +113,18 @@
                 <div class="staff-info">
                     <h3>Kaida</h3>
                     <p>Inhaberin und Herz des Futomaki.</p>
-                    <div class="staff-tip"><strong>Kaidas Tipp:</strong> "Der Samurai gibt euch Kraft!"</div>
                 </div>
             </div>
-            <div class="staff-member">
-                <div class="staff-image">KALEA</div>
-                <div class="staff-info">
-                    <h3>Kalea</h3>
-                    <p>Meisterin der feinen Klinge.</p>
-                    <div class="staff-tip"><strong>Kaleas Tipp:</strong> "Ein Sakura Martini zum Sashimi!"</div>
-                </div>
-            </div>
-            <div class="staff-member">
-                <div class="staff-image">YOKOMO</div>
-                <div class="staff-info">
-                    <h3>Yokomo</h3>
-                    <p>Unsere Seele in der warmen Küche.</p>
-                    <div class="staff-tip"><strong>Momo's Tipp:</strong> "Probiert meine Melonen-Limo!"</div>
-                </div>
-            </div>
-            <div class="staff-member">
-                <div class="staff-image">AYU</div>
-                <div class="staff-info">
-                    <h3>Ayu</h3>
-                    <p>Immer ein Lächeln für unsere Gäste.</p>
-                </div>
-            </div>
-        </section>
+            </section>
     </main>
 
     <footer>
         <p>
-            <a href="https://youtu.be/DLzxrzFCyOs?list=RDDLzxrzFCyOs?autoplay=1" target="_blank" class="egg-trigger">©</a> 
+            <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs&autoplay=1" class="egg-trigger">©</a> 
             2026 Futomaki. Das Design und die Zusammenstellung dieser Präsenz sind urheberrechtlich geschützt. 
-            Alle externen Medieninhalte verbleiben im Eigentum der jeweiligen Rechteinhaber.
         </p>
     </footer>
-
-    <div id="modal-kaida" class="modal-overlay" onclick="closeModal('modal-kaida')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-kaida')">&times;</span>
-            <h3>Die deftige Kaida</h3><p><strong>Deftig & Herzhaft</strong></p><p>1 gr. Tonkatsu-Schnitzel, 1 Schüssel Udon, 1 kl. Schale Edamame, 1 Shōchū.</p><span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-    <div id="modal-kalea" class="modal-overlay" onclick="closeModal('modal-kalea')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-kalea')">&times;</span>
-            <h3>Die zarte Kalea</h3><p><strong>Edel & Filigran</strong></p><p>5 Scheiben Sashimi, 4 Stk. Rainbow Roll, 1 Miso-Suppe, 1 Sakura Martini.</p><span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-    <div id="modal-momo" class="modal-overlay" onclick="closeModal('modal-momo')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-momo')">&times;</span>
-            <h3>Die süße Momo</h3><p><strong>Süß & Verspielt</strong></p><p>2 Stk. Inari-Sushi, 3 Stk. Tamagoyaki, 1 Mochi & 1 Taiyaki, 1 Melonen-Limo.</p><span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-    <div id="modal-moench" class="modal-overlay" onclick="closeModal('modal-moench')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-moench')">&times;</span>
-            <h3>Der Bettelmönch</h3><p><strong>Bescheiden & Traditionell</strong></p><p>1 Schüssel Reis, 3 Stk. Narezushi, 1 kl. Schale Gemüse, 1 Matcha-Tee.</p><span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-    <div id="modal-samurai" class="modal-overlay" onclick="closeModal('modal-samurai')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-samurai')">&times;</span>
-            <h3>Der Samurai</h3><p><strong>Kraftvoll & Stolz</strong></p><p>4 Stk. Premium Nigiri, 3 Stk. Tempura, 1 mittlere Schale Ramen, 1 Sake.</p><span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-    <div id="modal-ronin" class="modal-overlay" onclick="closeModal('modal-ronin')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-ronin')">&times;</span>
-            <h3>Der Ronin</h3><p><strong>Wild & Ungebunden</strong></p><p>4 Stk. Karaage, 3 Stk. Takoyaki, 4 Stk. Dragon Roll, 1 Wasabi Bloody Mary.</p><span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-    <div id="modal-wald" class="modal-overlay" onclick="closeModal('modal-wald')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-wald')">&times;</span>
-            <h3>Der Ruf des Waldes</h3><p><strong>Natürlich & Erdig</strong></p><p>1 kl. Schale Pilze, 1 gegrillter Fisch (ganz), 3 Stk. Kräuter-Tempura, 1 Amazake.</p><span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-    <div id="modal-klinge" class="modal-overlay" onclick="closeModal('modal-klinge')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-klinge')">&times;</span>
-            <h3>Die brennende Klinge</h3><p><strong>Scharf & Intensiv</strong></p><p>1 Schüssel scharfe Ramen, 3 Stk. Gyoza, 4 Stk. Spicy Tuna Roll.</p><span class="modal-price">150 Gil</span>
-        </div>
-    </div>
 
     <script src="script.js"></script>
 </body>
 </html>
-
