--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <footer>
         <p>
-            <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs&autoplay=1" class="egg-trigger">©</a> 
+            <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs&autoplay=1&mute=1" target="_blank" class="egg-trigger">©</a> 
             2026 Futomaki. Das Design und die Zusammenstellung dieser Präsenz sind urheberrechtlich geschützt. 
         </p>
     </footer>
