--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <meta property="og:title" content="Futomaki - Othardische Tradition" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://DEIN_NEUER_ACCOUNTNAME.github.io/futomaki/" />
-    <meta property="og:image" content="https://DEIN_NEUER_ACCOUNTNAME.github.io/futomaki/hintergrund.jpg" />
+    <meta property="og:url" content="https://kaidaokada.github.io/futomaki/" />
+    <meta property="og:image" content="https://kaidaokada.github.io/futomaki/hintergrund.jpg" />
     <meta property="og:description" content="Traditionelle Köstlichkeiten aus dem Herzen Othards. Erlebt authentische Sushi-Kunst und östliche Gastfreundschaft." />
     <meta name="theme-color" content="#d4af37">
     <meta name="twitter:card" content="summary_large_image">
@@ -102,10 +102,6 @@
             </div>
             </section>
 
-        <section id="getraenke" class="tab-content">
-            <h2>Getränkekarte</h2>
-            </section>
-
         <section id="mitarbeiter" class="tab-content">
             <h2>Unser Team</h2>
             <div class="staff-member">
@@ -113,15 +109,37 @@
                 <div class="staff-info">
                     <h3>Kaida</h3>
                     <p>Inhaberin und Herz des Futomaki.</p>
+                    <div class="staff-tip"><strong>Kaidas Tipp:</strong> "Der Samurai gibt euch Kraft!"</div>
                 </div>
             </div>
-            </section>
+            <div class="staff-member">
+                <div class="staff-image">KALEA</div>
+                <div class="staff-info">
+                    <h3>Kalea</h3>
+                    <p>Meisterin der feinen Klinge.</p>
+                </div>
+            </div>
+            <div class="staff-member">
+                <div class="staff-image">YOKOMO</div>
+                <div class="staff-info">
+                    <h3>Yokomo</h3>
+                    <p>Unsere Seele in der warmen Küche.</p>
+                </div>
+            </div>
+            <div class="staff-member">
+                <div class="staff-image">AYU</div>
+                <div class="staff-info">
+                    <h3>Ayu</h3>
+                    <p>Immer ein Lächeln für unsere Gäste.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
         <p>
             <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs&autoplay=1&mute=1" target="_blank" class="egg-trigger">©</a> 
-            2026 Futomaki. Das Design und die Zusammenstellung dieser Präsenz sind urheberrechtlich geschützt. 
+            2026 Futomaki. Das Design und die Zusammenstellung dieser Präsenz sind urheberrechtlich geschützt.
         </p>
     </footer>
 
