--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
                     <small class="click-hint">Klick mich!</small>
                 </summary>
                 <div class="story-content">
-                    <p>Das Futomaki ist ein Sushi-Restaurant aus den ländlicheren Gebieten Othards, das als kleiner Bettlerstand eines Kindes angefangen hat, das versucht hat sich durchzuschlagen. Als eines von 5 verwaisten Geschwistern musste Kaida nutzen was sie konnte, um sich und ihre Schwestern zu ernähren - und das war Kochen.</p>
-                    <p>Besonders Sushi hatte es ihr angetan, und so begann sie ihre Kochkünste zu verkaufen. Zuerst auf der Straße, bedroht von Armut, Gewalt und Korruption. Kaida gelang es aber, sich und ihre Schwestern zu beschützen und zu ernähren und baute das Ganze später noch aus. So wuchs das Futomaki ganz natürlich, wurde bekannt in dem Landstrich, den Kaida und ihre Schwestern ihre Heimat nannten.</p>
-                    <p>Die Schwestern halfen wo sie konnten, doch irgendwann wurde jede von ihnen erwachsen, hatte eigene Wünsche und so trug es alle in die Welt hinaus. Kaida selbst verschlug es in den Westen, wo sie den Namen Futomaki mit sich trug und neu aufbaute - und zwar zu dem, was man heute sieht. Ein etabliertes, schönes Restaurant, das von einer Bettlerin wortwörtlich aus Staub und Dreck gestampft wurde.</p>
-                    <p>Das Futomaki steht für Wachstum und Tradition und dem Kampf gegen Windmühlen. Das Futomaki benutzt die Hälfte seiner Gewinne dazu, Waisenhäuser in armen Gegenden Othards zu unterstützen. Kaida und ihre Mitarbeiterinnen (Kalea, Yokomo, Ayu) wollen, dass andere Kinder schöner aufwachsen als zum Beispiel Kaida.</p>
+                    <p>Das Futomaki ist ein Sushi-Restaurant aus den ländlicheren Gebieten Othards, das als kleiner Bettlerstand eines Kindes angefangen hat...</p>
+                    <p>Das Futomaki steht für Wachstum und Tradition und dem Kampf gegen Windmühlen. Das Futomaki benutzt die Hälfte seiner Gewinne dazu, Waisenhäuser in armen Gegenden Othards zu unterstützen.</p>
                 </div>
             </details>
         </section>
@@ -74,16 +72,16 @@
             <div class="offers-grid">
                 <div class="offer-item">
                     <h3>Kulinarik & Handwerk</h3>
-                    <p>Genießt handgefertigtes Sushi und warme Köstlichkeiten der östlichen Küche, die nach traditionellen Rezepten und mit höchster Sorgfalt zubereitet werden.</p>
+                    <p>Genießt handgefertigtes Sushi und warme Köstlichkeiten der östlichen Küche.</p>
                 </div>
                 <div class="offer-item">
                     <h3>Traditionelle Atmosphäre</h3>
-                    <p>Taucht ein in ein Ambiente, das den Geist Othards atmet. Von der Einrichtung bis hin zur Gastfreundschaft ist jeder Besuch eine kleine Reise in den fernen Osten.</p>
+                    <p>Taucht ein in ein Ambiente, das den Geist Othards atmet.</p>
                 </div>
                 <div class="offer-item full-width">
                     <h3>Private Refugien</h3>
-                    <p>Für Gäste, die den Abend in ungestörter Zweisamkeit verbringen möchten, bieten wir drei separat gelegene Räumlichkeiten an. Diese exklusiven Rückzugsorte ermöglichen es Paaren, fernab des allgemeinen Restaurantbetriebs zu speisen und sich zu unterhalten.</p>
-                    <p class="service-note">Aufgrund der persönlichen und gesonderten Betreuung dieser Räumlichkeiten durch unser Personal erheben wir hierfür eine zusätzliche Servicegebühr von <strong>75 Gil</strong>.</p>
+                    <p>Für Gäste, die den Abend in ungestörter Zweisamkeit verbringen möchten, bieten wir drei separat gelegene Räumlichkeiten an.</p>
+                    <p class="service-note">Servicegebühr: <strong>75 Gil</strong>.</p>
                 </div>
             </div>
         </section>
@@ -100,7 +98,25 @@
                 <div class="menu-card" onclick="openModal('modal-wald')">Der Ruf des Waldes</div>
                 <div class="menu-card" onclick="openModal('modal-klinge')">Die brennende Klinge</div>
             </div>
-            </section>
+
+            <h2>Sushi & Küche</h2>
+            <div class="menu-grid">
+                <div class="menu-item"><div class="menu-item-header"><span>Nigiri</span><span>45 Gil</span></div><span class="menu-item-desc">Handgeformter Reis belegt mit Fisch.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Maki</span><span>49 Gil</span></div><span class="menu-item-desc">Sushi-Rollen mit Nori.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Sashimi</span><span>52 Gil</span></div><span class="menu-item-desc">Dünne Scheiben rohen Fischs.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Ramen</span><span>35 Gil</span></div><span class="menu-item-desc">Nudelsuppe mit Brühe.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Tempura</span><span>40 Gil</span></div><span class="menu-item-desc">Frittiertes im Teigmantel.</span></div>
+                </div>
+        </section>
+
+        <section id="getraenke" class="tab-content">
+            <h2>Getränkekarte</h2>
+            <div class="menu-grid">
+                <div class="menu-item"><div class="menu-item-header"><span>Nihonshu Sake</span><span>12 Gil</span></div></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Matcha Tee</span><span>13 Gil</span></div></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Sakura Martini</span><span>18 Gil</span></div></div>
+                </div>
+        </section>
 
         <section id="mitarbeiter" class="tab-content">
             <h2>Unser Team</h2>
@@ -109,40 +125,21 @@
                 <div class="staff-info">
                     <h3>Kaida</h3>
                     <p>Inhaberin und Herz des Futomaki.</p>
-                    <div class="staff-tip"><strong>Kaidas Tipp:</strong> "Der Samurai gibt euch Kraft!"</div>
-                </div>
-            </div>
-            <div class="staff-member">
-                <div class="staff-image">KALEA</div>
-                <div class="staff-info">
-                    <h3>Kalea</h3>
-                    <p>Meisterin der feinen Klinge.</p>
-                </div>
-            </div>
-            <div class="staff-member">
-                <div class="staff-image">YOKOMO</div>
-                <div class="staff-info">
-                    <h3>Yokomo</h3>
-                    <p>Unsere Seele in der warmen Küche.</p>
-                </div>
-            </div>
-            <div class="staff-member">
-                <div class="staff-image">AYU</div>
-                <div class="staff-info">
-                    <h3>Ayu</h3>
-                    <p>Immer ein Lächeln für unsere Gäste.</p>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>
-            <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs&autoplay=1&mute=1" target="_blank" class="egg-trigger">©</a> 
-            2026 Futomaki. Das Design und die Zusammenstellung dieser Präsenz sind urheberrechtlich geschützt.
-        </p>
+        <p><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs&autoplay=1&mute=1" target="_blank" class="egg-trigger">©</a> 2026 Futomaki. Das Design ist geschützt.</p>
     </footer>
 
+    <div id="modal-kaida" class="modal-overlay" onclick="closeModal('modal-kaida')">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <span class="close-modal" onclick="closeModal('modal-kaida')">&times;</span>
+            <h3>Die deftige Kaida</h3><p>150 Gil</p>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
