--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="story-content">
                     <p>Das Futomaki ist ein Sushi-Restaurant aus den ländlicheren Gebieten Othards, das als kleiner Bettlerstand eines Kindes angefangen hat, das versucht hat sich durchzuschlagen. Als eines von 5 verwaisten Geschwistern musste Kaida nutzen was sie konnte, um sich und ihre Schwestern zu ernähren - und das war Kochen.</p>
                     <p>Besonders Sushi hatte es ihr angetan, und so begann sie ihre Kochkünste zu verkaufen. Zuerst auf der Straße, bedroht von Armut, Gewalt und Korruption. Kaida gelang es aber, sich und ihre Schwestern zu beschützen und zu ernähren und baute das Ganze später noch aus. So wuchs das Futomaki ganz natürlich, wurde bekannt in dem Landstrich, den Kaida und ihre Schwestern ihre Heimat nannten.</p>
-                    <p>Die Schwestern halfen wo sie konnten, doch irgendwann wurde jede von ihnen erwachsen, hatte eigene Wünsche und so trug es alle in die Welt hinaus. Kaida selbst verschlug es in den Westen, wo sie den Namen Futomaki mit sich trug und neu aufbaute - und zwar zu dem, what man heute sieht. Ein etabliertes, schönes Restaurant, das von einer Bettlerin wortwörtlich aus Staub und Dreck gestampft wurde.</p>
+                    <p>Die Schwestern halfen wo sie konnten, doch irgendwann wurde jede von ihnen erwachsen, hatte eigene Wünsche und so trug es alle in die Welt hinaus. Kaida selbst verschlug es in den Westen, wo sie den Namen Futomaki mit sich trug und neu aufbaute - und zwar zu dem, was man heute sieht. Ein etabliertes, schönes Restaurant, das von einer Bettlerin wortwörtlich aus Staub und Dreck gestampft wurde.</p>
                     <p>Das Futomaki steht für Wachstum und Tradition und dem Kampf gegen Windmühlen. Das Futomaki benutzt die Hälfte seiner Gewinne dazu, Waisenhäuser in armen Gegenden Othards zu unterstützen. Kaida und ihre Mitarbeiterinnen (Kalea, Yokomo, Ayu) wollen, dass andere Kinder schöner aufwachsen als zum Beispiel Kaida.</p>
                 </div>
             </details>
@@ -196,29 +196,28 @@
                 <div class="staff-image"><img src="kaida.png" alt="Kaida"></div>
                 <div class="staff-info">
                     <h3>Kaida</h3>
-                    <p>Inhaberin und Herz des Futomaki.</p>
-                    <div class="staff-tip"><strong>Kaidas Tipp:</strong> "Der Samurai gibt euch Kraft!"</div>
+                    <p>Inhaberin, Herz und Sushimeisterin des Futomaki. Sie wacht über die Traditionen und sorgt dafür, dass jeder Bissen die Geschichte ihrer Heimat erzählt.</p>
                 </div>
             </div>
             <div class="staff-member">
                 <div class="staff-image">KALEA</div>
                 <div class="staff-info">
                     <h3>Kalea</h3>
-                    <p>Meisterin der feinen Klinge.</p>
+                    <p>Unsere Hüterin der Kelche. Sie beherrscht die Kunst der ohtardischen Brau- und Mixkunst und sorgt mit wachsamen Augen dafür, dass keine Kehle im Futomaki trocken bleiben muss.</p>
                 </div>
             </div>
             <div class="staff-member">
                 <div class="staff-image">YOKOMO</div>
                 <div class="staff-info">
                     <h3>Yokomo</h3>
-                    <p>Unsere Seele in der warmen Küche.</p>
+                    <p>Die Seele der warmen Küche. Wo Kaida den kalten Reis formt, bändigt Yokomo das Feuer und bereitet all jene herzhaften Köstlichkeiten zu, die jenseits der Sushi-Matte für wohlige Wärme sorgen.</p>
                 </div>
             </div>
             <div class="staff-member">
                 <div class="staff-image">AYU</div>
                 <div class="staff-info">
                     <h3>Ayu</h3>
-                    <p>Immer ein Lächeln für unsere Gäste.</p>
+                    <p>Die Blume unseres Gastraums. Mit der Anmut eines Herbstblattes im Wind geleitet sie unsere Gäste zu ihren Plätzen und sorgt mit ihrem strahlenden Lächeln dafür, dass die Sorgen des Alltags bereits an der Schwelle verfliegen.</p>
                 </div>
             </div>
         </section>
