--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="staff-image"><img src="kaida.png" alt="Kaida"></div>
                 <div class="staff-info">
                     <h3>Kaida</h3>
-                    <p>Die kunstvoll tätowierte Inhaberin, das Herz und die Sushimeisterin des Futomaki. Sie wacht über die Traditionen und sorgt dafür, dass jeder Bissen die Geschichte ihrer Heimat erzählt.</p>
+                    <p>Die kunstvoll tätowierte Inhaberin, das Herz und die Sushimeisterin des Futomaki. Sie wacht über die Traditionen und sorgt dafür, dass jeder Bissen die Geschichte ihrer Heimat erzählt. Wenn du dich nicht benimmst wird sie dich sehr deutlich des Hauses verweisen.</p>
                 </div>
             </div>
             <div class="staff-member">
@@ -313,4 +313,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
