--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
             <h2>Hausregeln</h2>
             <div class="rules-container">
                 <div class="rules-box bad">
-                    <h3>Was du hier nicht findest</h3>
-                    <ul><li>Respektlosen Umgang</li><li>Persönliche Dramen</li><li>Unreifes Verhalten</li><li>Übergriffigkeiten</li><li>Jugendfreie Aktionen</li><li>Geschmacksverstärker</li></ul>
+                    <h3>So fliegst du raus</h3>
+                    <ul><li>Respektloser Umgang</li><li>Persönliche Dramen</li><li>Unreifes Verhalten</li><li>Übergriffigkeiten</li><li>Unsittliche Aktionen</li><li>Geschmacksverstärker</li></ul>
                 </div>
                 <div class="rules-box good">
-                    <h3>Was du hier findest</h3>
+                    <h3>Was du bekommst</h3>
                     <ul><li>Freundliches hilfsbereites Personal</li><li>Leckere Speisen und Getränke</li><li>Authentische Östliche Küche</li><li>Genug Platz für deine Beine</li><li>Gute Laune und vollen Magen</li><li>Einen perfekten Abend mit Sushi</li></ul>
                 </div>
             </div>
@@ -313,5 +313,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
