--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
 
         <section id="hausregeln" class="tab-content">
-            <h2>Hausregeln</h2>
+            <h2>Bevor du reinkommst!</h2>
             <div class="rules-container">
                 <div class="rules-box bad">
                     <h3>So fliegst du raus</h3>
@@ -313,6 +313,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
