--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <nav>
         <button class="tab-button active" onclick="openTab(event, 'willkommen')">Das Futomaki</button>
-        <button class="tab-button" onclick="openTab(event, 'hausregeln')">Hausregeln</button>
+        <button class="tab-button" onclick="openTab(event, 'hausregeln')">Hinweise</button>
         <button class="tab-button" onclick="openTab(event, 'angebote')">Angebote</button>
         <button class="tab-button" onclick="openTab(event, 'speisekarte')">Speisekarte</button>
         <button class="tab-button" onclick="openTab(event, 'getraenke')">Getränkekarte</button>
@@ -313,6 +313,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
