--- a/index.html
+++ b/index.html
@@ -200,21 +200,21 @@
                 </div>
             </div>
             <div class="staff-member">
-                <div class="staff-image">KALEA</div>
+                <div class="staff-image"><img src="kalea.jpg" alt="Kalea"></div>
                 <div class="staff-info">
                     <h3>Kalea</h3>
                     <p>Unsere Hüterin der Kelche. Sie beherrscht die Kunst der ohtardischen Brau- und Mixkunst und sorgt mit wachsamen Augen dafür, dass keine Kehle im Futomaki trocken bleiben muss.</p>
                 </div>
             </div>
             <div class="staff-member">
-                <div class="staff-image">YOKOMO</div>
+                <div class="staff-image"><img src="yokomo.jpg" alt="Yokomo"></div>
                 <div class="staff-info">
                     <h3>Yokomo</h3>
                     <p>Die Seele der warmen Küche. Wo Kaida den kalten Reis formt, bändigt Yokomo das Feuer und bereitet all jene herzhaften Köstlichkeiten zu, die jenseits der Sushi-Matte für wohlige Wärme sorgen.</p>
                 </div>
             </div>
             <div class="staff-member">
-                <div class="staff-image">AYU</div>
+                <div class="staff-image"><img src="ayu.jpg" alt="Ayu"></div>
                 <div class="staff-info">
                     <h3>Ayu</h3>
                     <p>Die Blume unseres Gastraums. Mit der Anmut eines Herbstblattes im Wind geleitet sie unsere Gäste zu ihren Plätzen und sorgt mit ihrem strahlenden Lächeln dafür, dass die Sorgen des Alltags bereits an der Schwelle verfliegen.</p>
@@ -313,6 +313,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
