--- a/index.html
+++ b/index.html
@@ -190,32 +190,34 @@
         </section>
 
         <section id="team" class="tab-content">
-            <div class="staff-member">
-                <div class="staff-image"><img src="kaida.jpg" alt="Kaida"></div>
-                <div class="staff-info">
-                    <h3>Kaida</h3>
-                    <p>Die kunstvoll tätowierte Inhaberin, das Herz und die Sushimeisterin des Futomaki. Sie wacht über die Traditionen und sorgt dafür, dass jeder Bissen die Geschichte ihrer Heimat erzählt. Wenn du dich nicht benimmst wird sie dich sehr deutlich des Hauses verweisen.</p>
+            <div class="team-grid">
+                <div class="team-member-card">
+                    <div class="staff-image"><img src="kaida.jpg" alt="Kaida"></div>
+                    <div class="staff-info">
+                        <h3>Kaida</h3>
+                        <p>Die kunstvoll tätowierte Inhaberin, das Herz und die Sushimeisterin des Futomaki. Sie wacht über die Traditionen und sorgt für authentischen Genuss.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="staff-member">
-                <div class="staff-image"><img src="kalea.jpg" alt="Kalea"></div>
-                <div class="staff-info">
-                    <h3>Kalea</h3>
-                    <p>Unsere Hüterin der Kelche. Sie beherrscht die Kunst der ohtardischen Brau- und Mixkunst und sorgt mit wachsamen Augen dafür, dass keine Kehle im Futomaki trocken bleiben muss.</p>
+                <div class="team-member-card">
+                    <div class="staff-image"><img src="kalea.jpg" alt="Kalea"></div>
+                    <div class="staff-info">
+                        <h3>Kalea</h3>
+                        <p>Unsere Hüterin der Kelche. Sie beherrscht die Kunst der ohtardischen Mixkunst und sorgt dafür, dass keine Kehle im Futomaki trocken bleiben muss.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="staff-member">
-                <div class="staff-image"><img src="yokomo.jpg" alt="Yokomo"></div>
-                <div class="staff-info">
-                    <h3>Yokomo</h3>
-                    <p>Die Seele der warmen Küche. Wo Kaida den kalten Reis formt, bändigt Yokomo das Feuer und bereitet all jene herzhaften Köstlichkeiten zu, die jenseits der Sushi-Matte für wohlige Wärme sorgen.</p>
+                <div class="team-member-card">
+                    <div class="staff-image"><img src="yokomo.jpg" alt="Yokomo"></div>
+                    <div class="staff-info">
+                        <h3>Yokomo</h3>
+                        <p>Die Seele der warmen Küche. Wo Kaida Reis formt, bändigt Yokomo das Feuer und bereitet herzhafte Köstlichkeiten jenseits der Sushi-Matte zu.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="staff-member">
-                <div class="staff-image"><img src="ayu.jpg" alt="Ayu"></div>
-                <div class="staff-info">
-                    <h3>Ayu</h3>
-                    <p>Die Blume unseres Gastraums. Mit der Anmut eines Herbstblattes im Wind geleitet sie unsere Gäste zu ihren Plätzen und sorgt mit ihrem strahlenden Lächeln dafür, dass die Sorgen des Alltags bereits an der Schwelle verfliegen.</p>
+                <div class="team-member-card">
+                    <div class="staff-image"><img src="ayu.jpg" alt="Ayu"></div>
+                    <div class="staff-info">
+                        <h3>Ayu</h3>
+                        <p>Die Blume unseres Gastraums. Mit der Anmut eines Herbstblattes geleitet sie Gäste zu ihren Plätzen und vertreibt mit ihrem Lächeln die Alltagssorgen.</p>
+                    </div>
                 </div>
             </div>
         </section>
