--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
         </section>
 
         <section id="team" class="tab-content">
+            <h2>Es haben die Ehre</h2>
             <div class="team-grid">
                 <div class="team-member-card">
                     <div class="staff-image"><img src="kaida.jpg" alt="Kaida"></div>
