--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <div id="header-container">
         <header>
             <h1>FUTOMAKI</h1>
+                <div id="header-container">
+                <div class="header-banner"></div> <header>
+    </header>
+</div>
         </header>
     </div>
 
@@ -329,3 +333,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
