--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
 <body>
 
     <div id="header-container">
+        <div class="header-banner"></div>
         <header>
             <h1>FUTOMAKI</h1>
-                <div id="header-container">
-                <div class="header-banner"></div> <header>
-    </header>
-</div>
         </header>
     </div>
 
@@ -160,6 +157,7 @@
                 <div class="menu-item"><div class="menu-item-header"><span>Mochi</span><span>22 Gil</span></div><span class="menu-item-desc">Zäher Reiskuchen mit Bohnenpaste.</span></div>
                 <div class="menu-item"><div class="menu-item-header"><span>Daifuku</span><span>21 Gil</span></div><span class="menu-item-desc">Mochi mit süßer Füllung.</span></div>
                 <div class="menu-item"><div class="menu-item-header"><span>Dorayaki</span><span>20 Gil</span></div><span class="menu-item-desc">Pfannkuchen mit süßer Bohnenpaste.</span></div>
+                <div class="user-info-text">Hinweis: Songtexte werden bei Bedarf separat in Code-Fenstern ausgegeben.</div>
                 <div class="menu-item"><div class="menu-item-header"><span>Taiyaki</span><span>24 Gil</span></div><span class="menu-item-desc">Fischförmiges Gebäck, warm serviert.</span></div>
                 <div class="menu-item"><div class="menu-item-header"><span>Anmitsu</span><span>22 Gil</span></div><span class="menu-item-desc">Gelee, Früchte und Matcha-Eis.</span></div>
                 <div class="menu-item"><div class="menu-item-header"><span>Yokan</span><span>23 Gil</span></div><span class="menu-item-desc">Fester Gelee-Nachtisch aus Agar-Agar.</span></div>
@@ -254,83 +252,10 @@
         <div class="modal-content" onclick="event.stopPropagation()">
             <span class="close-modal" onclick="closeModal('modal-kaida')">&times;</span>
             <h3>Die deftige Kaida</h3>
-            <p><strong>Deftig & Herzhaft</strong></p>
             <p>1 gr. Tonkatsu-Schnitzel, 1 Schüssel Udon, 1 kl. Schale Edamame, 1 Shōchū.</p>
             <span class="modal-price">150 Gil</span>
         </div>
     </div>
-
-    <div id="modal-kalea" class="modal-overlay" onclick="closeModal('modal-kalea')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-kalea')">&times;</span>
-            <h3>Die zarte Kalea</h3>
-            <p><strong>Edel & Filigran</strong></p>
-            <p>5 Scheiben Sashimi, 4 Stk. Rainbow Roll, 1 Miso-Suppe, 1 Sakura Martini.</p>
-            <span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-
-    <div id="modal-momo" class="modal-overlay" onclick="closeModal('modal-momo')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-momo')">&times;</span>
-            <h3>Die süße Momo</h3>
-            <p><strong>Süß & Verspielt</strong></p>
-            <p>2 Stk. Inari-Sushi, 3 Stk. Tamagoyaki, 1 Mochi & 1 Taiyaki, 1 Melonen-Limo.</p>
-            <span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-
-    <div id="modal-moench" class="modal-overlay" onclick="closeModal('modal-moench')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-moench')">&times;</span>
-            <h3>Der Bettelmönch</h3>
-            <p><strong>Bescheiden & Traditionell</strong></p>
-            <p>1 Schüssel Reis, 3 Stk. Narezushi, 1 kl. Schale Gemüse, 1 Matcha-Tee.</p>
-            <span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-
-    <div id="modal-samurai" class="modal-overlay" onclick="closeModal('modal-samurai')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-samurai')">&times;</span>
-            <h3>Der Samurai</h3>
-            <p><strong>Kraftvoll & Stolz</strong></p>
-            <p>4 Stk. Premium Nigiri, 3 Stk. Tempura, 1 mittlere Schale Ramen, 1 Sake.</p>
-            <span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-
-    <div id="modal-ronin" class="modal-overlay" onclick="closeModal('modal-ronin')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-ronin')">&times;</span>
-            <h3>Der Ronin</h3>
-            <p><strong>Wild & Ungebunden</strong></p>
-            <p>4 Stk. Karaage, 3 Stk. Takoyaki, 4 Stk. Dragon Roll, 1 Wasabi Bloody Mary.</p>
-            <span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-
-    <div id="modal-wald" class="modal-overlay" onclick="closeModal('modal-wald')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-wald')">&times;</span>
-            <h3>Der Ruf des Waldes</h3>
-            <p><strong>Natürlich & Erdig</strong></p>
-            <p>1 kl. Schale Pilze, 1 gegrillter Fisch (ganz), 3 Stk. Kräuter-Tempura, 1 Amazake.</p>
-            <span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-
-    <div id="modal-klinge" class="modal-overlay" onclick="closeModal('modal-klinge')">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-modal" onclick="closeModal('modal-klinge')">&times;</span>
-            <h3>Die brennende Klinge</h3>
-            <p><strong>Scharf & Intensiv</strong></p>
-            <p>1 Schüssel scharfe Ramen, 3 Stk. Gyoza, 4 Stk. Spicy Tuna Roll.</p>
-            <span class="modal-price">150 Gil</span>
-        </div>
-    </div>
-
     <script src="script.js"></script>
 </body>
 </html>
-
