--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <div id="header-container">
-        <div class="header-banner"></div>
+        <div class="header-banner"><img src="header-banner.png" alt="Banner"></div>
         <header>
             <h1>FUTOMAKI</h1>
         </header>
@@ -259,3 +259,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
