--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <div id="header-container">
-        <div class="header-banner"><img src="header-banner.png" alt="Banner"></div>
+        <div class="header-banner"></div>
         <header>
             <h1>FUTOMAKI</h1>
         </header>
@@ -157,7 +157,6 @@
                 <div class="menu-item"><div class="menu-item-header"><span>Mochi</span><span>22 Gil</span></div><span class="menu-item-desc">Zäher Reiskuchen mit Bohnenpaste.</span></div>
                 <div class="menu-item"><div class="menu-item-header"><span>Daifuku</span><span>21 Gil</span></div><span class="menu-item-desc">Mochi mit süßer Füllung.</span></div>
                 <div class="menu-item"><div class="menu-item-header"><span>Dorayaki</span><span>20 Gil</span></div><span class="menu-item-desc">Pfannkuchen mit süßer Bohnenpaste.</span></div>
-                <div class="user-info-text">Hinweis: Songtexte werden bei Bedarf separat in Code-Fenstern ausgegeben.</div>
                 <div class="menu-item"><div class="menu-item-header"><span>Taiyaki</span><span>24 Gil</span></div><span class="menu-item-desc">Fischförmiges Gebäck, warm serviert.</span></div>
                 <div class="menu-item"><div class="menu-item-header"><span>Anmitsu</span><span>22 Gil</span></div><span class="menu-item-desc">Gelee, Früchte und Matcha-Eis.</span></div>
                 <div class="menu-item"><div class="menu-item-header"><span>Yokan</span><span>23 Gil</span></div><span class="menu-item-desc">Fester Gelee-Nachtisch aus Agar-Agar.</span></div>
@@ -176,35 +175,7 @@
                 <div class="menu-item"><div class="menu-item-header"><span>Cha (Tee)</span><span>13 Gil</span></div><span class="menu-item-desc">Matcha-Tee, wichtig für Teezeremonien.</span></div>
                 <div class="menu-item"><div class="menu-item-header"><span>Sake-Kasu</span><span>13 Gil</span></div><span class="menu-item-desc">Nebenprodukt der Sake-Herstellung.</span></div>
             </div>
-
-            <h2>Cocktails</h2>
-            <div class="menu-grid">
-                <div class="menu-item"><div class="menu-item-header"><span>Sakura Martini</span><span>18 Gil</span></div><span class="menu-item-desc">Gin mit Kirschblütenlikör.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Ume Sour</span><span>17 Gil</span></div><span class="menu-item-desc">Umeshu mit süß-saurer Note.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Matcha Highball</span><span>13 Gil</span></div><span class="menu-item-desc">Whisky, Matcha-Tee und Soda.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Yuzu Collins</span><span>14 Gil</span></div><span class="menu-item-desc">Shochu mit frischem Yuzu-Saft.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Sake Mojito</span><span>12 Gil</span></div><span class="menu-item-desc">Sake mit Minze und Limette.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Shiso Gimlet</span><span>13 Gil</span></div><span class="menu-item-desc">Gin mit Limette und Shiso-Blättern.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Wasabi Bloody Mary</span><span>13 Gil</span></div><span class="menu-item-desc">Pikant mit Wasabi und Sake.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Momo Bellini</span><span>16 Gil</span></div><span class="menu-item-desc">Sake mit Pfirsichpüree und Yuzu.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Hojicha Old Fashioned</span><span>13 Gil</span></div><span class="menu-item-desc">Whisky mit geröstetem Hojicha-Tee.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Kokuto Daiquiri</span><span>13 Gil</span></div><span class="menu-item-desc">Rum mit dunklem Zucker und Shiso.</span></div>
-            </div>
-
-            <h2>Hauslimonaden</h2>
-            <div class="menu-grid">
-                <div class="menu-item"><div class="menu-item-header"><span>Lychee-Limonade</span><span>12 Gil</span></div><span class="menu-item-desc">Lychee-Püree und frische Minze.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Ramune</span><span>10 Gil</span></div><span class="menu-item-desc">Klassische Limo mit Glasperle.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Mango-Minz-Limo</span><span>13 Gil</span></div><span class="menu-item-desc">Süße Mango mit kühler Minze.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Yuzu Ale</span><span>11 Gil</span></div><span class="menu-item-desc">Yuzu mit Sojamilch.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Kiwi-Apfel-Limo</span><span>14 Gil</span></div><span class="menu-item-desc">Säuerlich-süßer Fruchtmix.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Momo's Melone</span><span>12 Gil</span></div><span class="menu-item-desc">Honigmelone mit Eiskristallen.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Honigmelone-Minz-Limo</span><span>13 Gil</span></div><span class="menu-item-desc">Würzige Minze mit süßer Melone.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Kaidas Sahne Klecks</span><span>10 Gil</span></div><span class="menu-item-desc">Limo mit einer Kugel Eiscreme.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Apfel-Rolanbeere-Limo</span><span>13 Gil</span></div><span class="menu-item-desc">Apfelsaft mit Erdbeerpüree.</span></div>
-                <div class="menu-item"><div class="menu-item-header"><span>Mogkalea</span><span>13 Gil</span></div><span class="menu-item-desc">Kaffee mit Mogry-Sahnehaube.</span></div>
-            </div>
-        </section>
+            </section>
 
         <section id="team" class="tab-content">
             <h2>Es haben die Ehre</h2>
@@ -213,38 +184,17 @@
                     <div class="staff-image"><img src="kaida.jpg" alt="Kaida"></div>
                     <div class="staff-info">
                         <h3>Kaida</h3>
-                        <p>Die kunstvoll tätowierte Inhaberin, das Herz und die Sushimeisterin des Futomaki. Sie wacht über die Traditionen und sorgt für authentischen Genuss.</p>
+                        <p>Die kunstvoll tätowierte Inhaberin, das Herz und die Sushimeisterin des Futomaki.</p>
                     </div>
                 </div>
-                <div class="team-member-card">
-                    <div class="staff-image"><img src="kalea.jpg" alt="Kalea"></div>
-                    <div class="staff-info">
-                        <h3>Kalea</h3>
-                        <p>Unsere Hüterin der Kelche. Sie beherrscht die Kunst der ohtardischen Mixkunst und sorgt dafür, dass keine Kehle im Futomaki trocken bleiben muss.</p>
-                    </div>
                 </div>
-                <div class="team-member-card">
-                    <div class="staff-image"><img src="yokomo.jpg" alt="Yokomo"></div>
-                    <div class="staff-info">
-                        <h3>Yokomo</h3>
-                        <p>Die Seele der warmen Küche. Wo Kaida Reis formt, bändigt Yokomo das Feuer und bereitet herzhafte Köstlichkeiten jenseits der Sushi-Matte zu.</p>
-                    </div>
-                </div>
-                <div class="team-member-card">
-                    <div class="staff-image"><img src="ayu.jpg" alt="Ayu"></div>
-                    <div class="staff-info">
-                        <h3>Ayu</h3>
-                        <p>Die Blume unseres Gastraums. Mit der Anmut eines Herbstblattes geleitet sie Gäste zu ihren Plätzen und vertreibt mit ihrem Lächeln die Alltagssorgen.</p>
-                    </div>
-                </div>
-            </div>
         </section>
     </main>
 
     <footer>
         <p>
             <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs&autoplay=1&mute=1" target="_blank" class="egg-trigger">©</a> 
-            2026 Futomaki. Das Design und die Zusammenstellung dieser Präsenz sind urheberrechtlich geschützt.
+            2026 Futomaki.
         </p>
     </footer>
 
@@ -259,4 +209,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
