--- a/index.html
+++ b/index.html
@@ -175,7 +175,35 @@
                 <div class="menu-item"><div class="menu-item-header"><span>Cha (Tee)</span><span>13 Gil</span></div><span class="menu-item-desc">Matcha-Tee, wichtig für Teezeremonien.</span></div>
                 <div class="menu-item"><div class="menu-item-header"><span>Sake-Kasu</span><span>13 Gil</span></div><span class="menu-item-desc">Nebenprodukt der Sake-Herstellung.</span></div>
             </div>
-            </section>
+
+            <h2>Cocktails</h2>
+            <div class="menu-grid">
+                <div class="menu-item"><div class="menu-item-header"><span>Sakura Martini</span><span>18 Gil</span></div><span class="menu-item-desc">Gin mit Kirschblütenlikör.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Ume Sour</span><span>17 Gil</span></div><span class="menu-item-desc">Umeshu mit süß-saurer Note.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Matcha Highball</span><span>13 Gil</span></div><span class="menu-item-desc">Whisky, Matcha-Tee und Soda.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Yuzu Collins</span><span>14 Gil</span></div><span class="menu-item-desc">Shochu mit frischem Yuzu-Saft.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Sake Mojito</span><span>12 Gil</span></div><span class="menu-item-desc">Sake mit Minze und Limette.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Shiso Gimlet</span><span>13 Gil</span></div><span class="menu-item-desc">Gin mit Limette und Shiso-Blättern.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Wasabi Bloody Mary</span><span>13 Gil</span></div><span class="menu-item-desc">Pikant mit Wasabi und Sake.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Momo Bellini</span><span>16 Gil</span></div><span class="menu-item-desc">Sake mit Pfirsichpüree und Yuzu.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Hojicha Old Fashioned</span><span>13 Gil</span></div><span class="menu-item-desc">Whisky mit geröstetem Hojicha-Tee.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Kokuto Daiquiri</span><span>13 Gil</span></div><span class="menu-item-desc">Rum mit dunklem Zucker und Shiso.</span></div>
+            </div>
+
+            <h2>Hauslimonaden</h2>
+            <div class="menu-grid">
+                <div class="menu-item"><div class="menu-item-header"><span>Lychee-Limonade</span><span>12 Gil</span></div><span class="menu-item-desc">Lychee-Püree und frische Minze.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Ramune</span><span>10 Gil</span></div><span class="menu-item-desc">Klassische Limo mit Glasperle.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Mango-Minz-Limo</span><span>13 Gil</span></div><span class="menu-item-desc">Süße Mango mit kühler Minze.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Yuzu Ale</span><span>11 Gil</span></div><span class="menu-item-desc">Yuzu mit Sojamilch.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Kiwi-Apfel-Limo</span><span>14 Gil</span></div><span class="menu-item-desc">Säuerlich-süßer Fruchtmix.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Momo's Melone</span><span>12 Gil</span></div><span class="menu-item-desc">Honigmelone mit Eiskristallen.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Honigmelone-Minz-Limo</span><span>13 Gil</span></div><span class="menu-item-desc">Würzige Minze mit süßer Melone.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Kaidas Sahne Klecks</span><span>10 Gil</span></div><span class="menu-item-desc">Limo mit einer Kugel Eiscreme.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Apfel-Rolanbeere-Limo</span><span>13 Gil</span></div><span class="menu-item-desc">Apfelsaft mit Erdbeerpüree.</span></div>
+                <div class="menu-item"><div class="menu-item-header"><span>Mogkalea</span><span>13 Gil</span></div><span class="menu-item-desc">Kaffee mit Mogry-Sahnehaube.</span></div>
+            </div>
+        </section>
 
         <section id="team" class="tab-content">
             <h2>Es haben die Ehre</h2>
@@ -184,17 +212,38 @@
                     <div class="staff-image"><img src="kaida.jpg" alt="Kaida"></div>
                     <div class="staff-info">
                         <h3>Kaida</h3>
-                        <p>Die kunstvoll tätowierte Inhaberin, das Herz und die Sushimeisterin des Futomaki.</p>
+                        <p>Die kunstvoll tätowierte Inhaberin, das Herz und die Sushimeisterin des Futomaki. Sie wacht über die Traditionen und sorgt für authentischen Genuss.</p>
                     </div>
                 </div>
+                <div class="team-member-card">
+                    <div class="staff-image"><img src="kalea.jpg" alt="Kalea"></div>
+                    <div class="staff-info">
+                        <h3>Kalea</h3>
+                        <p>Unsere Hüterin der Kelche. Sie beherrscht die Kunst der ohtardischen Mixkunst und sorgt dafür, dass keine Kehle im Futomaki trocken bleiben muss.</p>
+                    </div>
                 </div>
+                <div class="team-member-card">
+                    <div class="staff-image"><img src="yokomo.jpg" alt="Yokomo"></div>
+                    <div class="staff-info">
+                        <h3>Yokomo</h3>
+                        <p>Die Seele der warmen Küche. Wo Kaida Reis formt, bändigt Yokomo das Feuer und bereitet herzhafte Köstlichkeiten jenseits der Sushi-Matte zu.</p>
+                    </div>
+                </div>
+                <div class="team-member-card">
+                    <div class="staff-image"><img src="ayu.jpg" alt="Ayu"></div>
+                    <div class="staff-info">
+                        <h3>Ayu</h3>
+                        <p>Die Blume unseres Gastraums. Mit der Anmut eines Herbstblattes geleitet sie Gäste zu ihren Plätzen und vertreibt mit ihrem Lächeln die Alltagssorgen.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
     <footer>
         <p>
             <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs&autoplay=1&mute=1" target="_blank" class="egg-trigger">©</a> 
-            2026 Futomaki.
+            2026 Futomaki. Das Design und die Zusammenstellung dieser Präsenz sind urheberrechtlich geschützt.
         </p>
     </footer>
 
@@ -202,10 +251,82 @@
         <div class="modal-content" onclick="event.stopPropagation()">
             <span class="close-modal" onclick="closeModal('modal-kaida')">&times;</span>
             <h3>Die deftige Kaida</h3>
+            <p><strong>Deftig & Herzhaft</strong></p>
             <p>1 gr. Tonkatsu-Schnitzel, 1 Schüssel Udon, 1 kl. Schale Edamame, 1 Shōchū.</p>
             <span class="modal-price">150 Gil</span>
         </div>
     </div>
+
+    <div id="modal-kalea" class="modal-overlay" onclick="closeModal('modal-kalea')">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <span class="close-modal" onclick="closeModal('modal-kalea')">&times;</span>
+            <h3>Die zarte Kalea</h3>
+            <p><strong>Edel & Filigran</strong></p>
+            <p>5 Scheiben Sashimi, 4 Stk. Rainbow Roll, 1 Miso-Suppe, 1 Sakura Martini.</p>
+            <span class="modal-price">150 Gil</span>
+        </div>
+    </div>
+
+    <div id="modal-momo" class="modal-overlay" onclick="closeModal('modal-momo')">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <span class="close-modal" onclick="closeModal('modal-momo')">&times;</span>
+            <h3>Die süße Momo</h3>
+            <p><strong>Süß & Verspielt</strong></p>
+            <p>2 Stk. Inari-Sushi, 3 Stk. Tamagoyaki, 1 Mochi & 1 Taiyaki, 1 Melonen-Limo.</p>
+            <span class="modal-price">150 Gil</span>
+        </div>
+    </div>
+
+    <div id="modal-moench" class="modal-overlay" onclick="closeModal('modal-moench')">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <span class="close-modal" onclick="closeModal('modal-moench')">&times;</span>
+            <h3>Der Bettelmönch</h3>
+            <p><strong>Bescheiden & Traditionell</strong></p>
+            <p>1 Schüssel Reis, 3 Stk. Narezushi, 1 kl. Schale Gemüse, 1 Matcha-Tee.</p>
+            <span class="modal-price">150 Gil</span>
+        </div>
+    </div>
+
+    <div id="modal-samurai" class="modal-overlay" onclick="closeModal('modal-samurai')">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <span class="close-modal" onclick="closeModal('modal-samurai')">&times;</span>
+            <h3>Der Samurai</h3>
+            <p><strong>Kraftvoll & Stolz</strong></p>
+            <p>4 Stk. Premium Nigiri, 3 Stk. Tempura, 1 mittlere Schale Ramen, 1 Sake.</p>
+            <span class="modal-price">150 Gil</span>
+        </div>
+    </div>
+
+    <div id="modal-ronin" class="modal-overlay" onclick="closeModal('modal-ronin')">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <span class="close-modal" onclick="closeModal('modal-ronin')">&times;</span>
+            <h3>Der Ronin</h3>
+            <p><strong>Wild & Ungebunden</strong></p>
+            <p>4 Stk. Karaage, 3 Stk. Takoyaki, 4 Stk. Dragon Roll, 1 Wasabi Bloody Mary.</p>
+            <span class="modal-price">150 Gil</span>
+        </div>
+    </div>
+
+    <div id="modal-wald" class="modal-overlay" onclick="closeModal('modal-wald')">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <span class="close-modal" onclick="closeModal('modal-wald')">&times;</span>
+            <h3>Der Ruf des Waldes</h3>
+            <p><strong>Natürlich & Erdig</strong></p>
+            <p>1 kl. Schale Pilze, 1 gegrillter Fisch (ganz), 3 Stk. Kräuter-Tempura, 1 Amazake.</p>
+            <span class="modal-price">150 Gil</span>
+        </div>
+    </div>
+
+    <div id="modal-klinge" class="modal-overlay" onclick="closeModal('modal-klinge')">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <span class="close-modal" onclick="closeModal('modal-klinge')">&times;</span>
+            <h3>Die brennende Klinge</h3>
+            <p><strong>Scharf & Intensiv</strong></p>
+            <p>1 Schüssel scharfe Ramen, 3 Stk. Gyoza, 4 Stk. Spicy Tuna Roll.</p>
+            <span class="modal-price">150 Gil</span>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
